Fix alla prima section, per i vari gap

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,11 @@
 .flex-aboutus .no-bg{
     background-color: transparent;
 }
+.fa-down-long{
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+}
 
 
 
@@ -296,10 +301,12 @@ footer div a::after{
         margin-top: 1rem;
     }
     .bigger-card{
-        width: calc(60% + 1rem);
+        /* width: calc(60% + 1rem); questa non funziona bene */
+        width: calc(66.66666% - 0.333333rem);
     }
     .smaller-card{
-        width: 30%;
+        /* width: 30%; non funziona bene */
+        width: calc(33.333333% - 0.66666rem);
     }
 
     .main-container-full-section{
